# Bulk-File-Organizer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
bulk_organizer/: cli.py
